# api-docs

./: .gitignore  CLAUDE.md  README.md  agent-reference.html  agents.md  docs.json  llms-full.txt  llms.txt  mint.json  model-search.js  models.json  package.json  pricing-table.js  style.css  swagger.yaml  test_embeddings.py  test_guides.py  test_vercel_sdk.mjs  venice-audio-music-and-sfx.postman_collection.json  venice.yaml
.github/workflows/: purge-cloudflare-cache.yml  sync-static-models.yml
api-reference/: api-essentials.mdx  api-spec.mdx  error-codes.mdx  rate-limiting.mdx
ar/api-reference/: api-spec.mdx  error-codes.mdx  rate-limiting.mdx
ar/getting-started/: quick-start.mdx
ar/guides/: overview.mdx
ar/models/: embeddings.mdx  image.mdx  music.mdx  overview.mdx  speech-to-text.mdx  text-to-speech.mdx  text.mdx  video.mdx
ar/overview/: about-venice.mdx  beta-models.mdx  deprecations.mdx  getting-started.mdx  pricing.mdx  privacy.mdx  vvv-diem.mdx
changelog/: api-updates.mdx
de/api-reference/: api-spec.mdx  error-codes.mdx  rate-limiting.mdx
design/: x402-integration.md
getting-started/: quick-start.mdx
guides/: overview.mdx
models/: audio.mdx  embeddings.mdx  image.mdx  music.mdx  overview.mdx  speech-to-text.mdx  text-to-speech.mdx  text.mdx  video.mdx
overview/: about-venice.mdx  beta-models.mdx  content-moderation.mdx  data-collection.mdx  deprecations.mdx  getting-started.mdx  models.mdx  pricing.mdx  privacy.mdx  provider-privacy.mdx  vvv-diem.mdx
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: async_usage.py  audio_tts.py  chat_basic.py  chat_streaming.py  image_generation.py  langchain_basic.py  reasoning_models.py  tool_calling.py  vision.py  web_search.py
python-sdk/venice/: __init__.py  client.py  exceptions.py  types.py
python-sdk/venice/integrations/: __init__.py  langchain.py
scripts/: generate-model-pages-static.js  generate-pricing-static.js  generate-static-models.js  update-static-models.js
snippets/: CopyMarkdownButton.jsx  ModelSearch.jsx  authorByline.jsx  beta-callout.mdx  resources.mdx
welcome/: about-venice.mdx  getting-started.mdx  pricing.mdx  privacy.mdx
(+1124 files in other folders)
