[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venice-ai"
version = "0.1.0"
description = "Official Venice AI Python SDK with full API coverage, async support, and LangChain integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Venice AI", email = "support@venice.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "venice",
    "ai",
    "llm",
    "openai",
    "langchain",
    "private",
    "uncensored",
    "inference",
    "chat",
    "embeddings",
    "image-generation",
    "tts",
    "video",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2.0",
]
all = [
    "langchain-core>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://venice.ai"
Documentation = "https://docs.venice.ai"
Repository = "https://github.com/veniceai/venice-python"
Issues = "https://github.com/veniceai/venice-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["venice"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
